--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,8 @@ jobs:
         shell: bash -l {0}
         run: |
           pytest -v tests
-      - name: Test notebooks 
+      - name: Test notebooks
+        if: ${{ !(matrix.os == 'macos-15-intel' && matrix.python-version == '3.12') }}
         shell: bash -l {0}
         run: |
           python -m pip install matplotlib
